# avain

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.mit  README.md  avain  avain.py  default_config.txt  install.sh  requirements.txt
config/: default.txt  default_config.txt  exhaustive.txt  exhaustive_config.txt  fast.txt
config/example_configs/: fast_nmap_scan.txt
core/: analyzer.py  cli.py  controller.py  module_manager.py  module_manager_feedback.py  module_seeker.py  module_updater.py  result_processor.py  result_types.py  scan_result_processor.py  scanner.py  utility.py  visualizer.py  vuln_score_processor.py  webserver_map_processor.py
modules/: module_updater.py  utility.py
modules/cve_correlation/: avain_build.sh  avain_cve_correlation.py  module_updater.py
modules/cve_correlation/db_creation_src/: CMakeLists.txt  create_db.cpp
modules/nmap/: avain_nmap.py
modules/smb/: avain_build.sh  avain_enum.py
sample_result/: network_vulnerability_ratings.json
sample_result/scan_result_aggregation/: aggregation_groups.json  aggregation_options.json  scan_result.json
sample_result/vuln_score_aggregation/: host_scores.json  module_scores.json  vuln_score_result.json
sample_result/webserver_map_aggregation/: discovered_urls.txt  webserver_map_result.json
src/: cli.py
src/core/: analyzer.py  controller.py  module_manager.py  module_manager_feedback.py  module_updater.py  result_processor.py  result_types.py  scan_result_processor.py  scanner.py  (+4 more)
src/modules/analyzer/cve_correlation/db_creation_src/: CMakeLists.txt  create_db.cpp
(+79 files in other folders)
